--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,7 +11,14 @@
     
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
   <script src="partials/angular-ui-router.min.js"></script>
+  
+ 
+
+  <script src="Chart.min.js"></script>
+  <script src="angular-chart.js"></script>
   <script src="public/js/core.js"></script>
+
+
   <!-- <script src="public/js/directives.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="public/css/style.css" rel="stylesheet">
