--- a/views/home-list.html
+++ b/views/home-list.html
@@ -7,6 +7,18 @@
             
           </div>
 
+
+            <div class="col-lg-6 col-sm-12" id="bar-chart">
+          <div class="panel panel-default">
+            <div class="panel-heading">Bar Chart</div>
+            <div class="panel-body">
+              <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels"
+                      chart-series="series" chart-options="options"></canvas>
+            </div>
+          </div>
+        </div>
+
+
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
 
