added chart with stats

--- a/views/home-list.html
+++ b/views/home-list.html
@@ -8,7 +8,8 @@
           </div>
 
 
-            <div class="col-lg-6 col-sm-12" id="bar-chart">
+    <div class="row">
+          <div class="col-md-12 col-sm-12 portfolio-item">
           <div class="panel panel-default">
             <div class="panel-heading">Bar Chart</div>
             <div class="panel-body">
