see all stats in one view

--- a/views/home-list.html
+++ b/views/home-list.html
@@ -14,7 +14,7 @@
             <div class="panel-heading">Bar Chart</div>
             <div class="panel-body">
               <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels"
-                      chart-series="series" chart-options="options"></canvas>
+                      chart-series="series"></canvas>
             </div>
           </div>
         </div>
