--- a/views/ui-navbar.ejs
+++ b/views/ui-navbar.ejs
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col-sm-12">
 
-  <a ui-sref=".list" class="btn btn-primary">Leads</a>
+  <a ui-sref=".stats" class="btn btn-primary">Stats</a>
 
-  <a ui-sref=".list2" class="btn btn-primary">Stats</a>
+  <a ui-sref=".leads" class="btn btn-primary">Leads</a>
 
   <a ui-sref=".dashboard" class="btn btn-primary">Analyzer Dashboard</a>
 
