--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       <% include partials/head %>
     
   </head>
-<body>
+<body ng-controller="dropdownController">
       
        <% include partials/header %>
 
